Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -59,8 +59,6 @@ ol {
             }
         }
         ul {
-            display: table;
-            float: none;
             margin: 0 auto;
             text-align: center;
             padding: 4px 0 0 0;
